# ITMO

.shared_venv/: pyvenv.cfg
1_course/BJD/labs_BJD/Conscious attitude and eco-friendly lifestyle/: Осознанное потребление.docx
1_course/BJD/labs_BJD/Health and self-care/: привычки здорового поведения.docx
1_course/BJD/labs_BJD/Healthy eating/: lab.docx
1_course/BJD/labs_BJD/Healthy sleep/: Lab2_Здоровый_сон. Исследование качества своего сна.odt
1_course/BJD/labs_BJD/Personal Finance Management/: lab.docx
1_course/Linux/Linux_Practice/: practice_1  practice_2
1_course/Linux/labs_Linux/Lab_1_Linux/: Lab_1_Linux.docx  Lab_1_Linux.odt
1_course/Linux/labs_Linux/Lab_2_Linux/: Lab_2_Linux.odt  Lab_2_Linux.tar  (+1 more)
1_course/Linux/lectures_Linux/: .~lock.практика 1#  lecture_1  lecture_2
1_course/VPD/: .~lock.Lab2_Здоровый_сон. Исследование качества своего сна.odt#  .~lock.отчет1.odt#
1_course/VPD/1/: ВПД_Охрименко_R3135.docx
1_course/english/1/: hw1
1_course/english_Practice/1/: email 115  text_for_voice_practice  ТЗ
1_course/english_Practice/2/: Saint-Petersburg.pptx
1_course/history/hw/: .~lock.лента врмени.odt#
2_course/Differential_equations/: README.md
2_course/MatStat/code/: task2.py
2_course/MetodsOptimus/code/: task 2.1.py
2_course/MetodsOptimus/myenv/: pyvenv.cfg
2_course/ROS/gitlab/repo/ros-course-itmo/lab1/my_robot_controller/: package.xml
2_course/ROS/gitlab/repo/ros-course-itmo/lab1/my_robot_controller/scripts/: node1.py  node2.py  node3.py
2_course/chMetods/lab1/: pythonAFunc.py  task2.py
2_course/linal/Lab5/: REDME.md
(+252 files in other folders)
